[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/Record.gd" type="Script" id=1]
[ext_resource path="res://assets/ui/Play.png" type="Texture" id=2]
[ext_resource path="res://assets/ui/Record.png" type="Texture" id=3]

[sub_resource type="AudioStreamMicrophone" id=1]

[node name="Record" type="HBoxContainer"]
anchor_right = 1.0
margin_bottom = 20.0
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_right = 77.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "Text"
valign = 1

[node name="Record" type="Button" parent="."]
margin_left = 81.0
margin_right = 158.0
margin_bottom = 20.0
size_flags_horizontal = 3
icon = ExtResource( 3 )
icon_align = 1

[node name="Play" type="Button" parent="."]
margin_left = 162.0
margin_right = 239.0
margin_bottom = 20.0
size_flags_horizontal = 3
icon = ExtResource( 2 )
icon_align = 1

[node name="Reset" type="Button" parent="."]
margin_left = 243.0
margin_right = 320.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Reset"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
autoplay = true

[node name="AudioStreamRecord" type="AudioStreamPlayer" parent="."]
stream = SubResource( 1 )
autoplay = true
bus = "Record"

[connection signal="button_down" from="Record" to="." method="_on_Record_button_down"]
[connection signal="button_up" from="Record" to="." method="_on_Record_button_up"]
[connection signal="pressed" from="Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Reset" to="." method="_on_Reset_pressed"]
